Fix footer to bottom of all pages and vertically align my account & shopping bag on larger screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -4,29 +4,42 @@
 
 body {
     font-family: 'Outfit', Helvetica, sans-serif;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
-h1, .heading-1 {
+.main-content {
+    flex: 1;
+}
+
+h1,
+.heading-1 {
     font-size: 2.4rem;
 }
 
-h2, .heading-2 {
+h2,
+.heading-2 {
     font-size: 2rem;
 }
 
-h3, .heading-3 {
+h3,
+.heading-3 {
     font-size: 1.75rem;
 }
 
-h4, .heading-4 {
+h4,
+.heading-4 {
     font-size: 1.5rem;
 }
 
-h5, .heading-5 {
+h5,
+.heading-5 {
     font-size: 1.25rem;
 }
 
-h6, .heading-6 {
+h6,
+.heading-6 {
     font-size: 1rem;
 }
 
@@ -137,7 +150,8 @@ p {
     padding: 1rem 0 0 0;
 }
 
-.rating-star, .category-icon {
+.rating-star,
+.category-icon {
     color: #415A77 !important;
 }
 
@@ -160,7 +174,6 @@ p {
 .footer {
     background-color: #0c1b2a;
     color: #fff;
-    margin-top: auto;
 }
 
 .footer-heading {
@@ -351,15 +364,18 @@ p {
         font-size: 1.1rem;
         border: none;
     }
+
     #mobile-top-header {
         font-size: 0.8rem !important;
         justify-content: center;
         text-align: center;
     }
+
     #mobile-top-header .list-inline-item {
         display: flex;
         align-items: center;
     }
+
     #mobile-top-header .dropdown-menu {
         position: absolute;
         top: 100%;
@@ -367,14 +383,17 @@ p {
         right: 0;
         z-index: 1000;
     }
+
     #mobile-top-header .nav-link {
         display: flex;
         flex-direction: column;
         align-items: center;
     }
+
     .list-inline-item:not(:last-child) {
         margin-right: 0;
     }
+
     ul {
         padding-left: 0.2rem;
         margin-bottom: 0.4rem;
